<resources>
    <string name="app_name">My Application</string>
    <string name="enter_your_password">enter your password</string>
    <string name="enter_your_email">enter your email</string>
    <string name="login">Login</string>
    <string name="don_t_have_account_sign_up">don\'t have account? sign up</string>
    <string name="sign_up">Sign up</string>
    <string name="repeat_your_password">repeat your password</string>
    <string name="already_have_account_login">already have account? login</string>
    <string name="forgot_password">forgot password?</string>
    <string name="forgot_password_title">Forgot password</string>
    <string name="send_password">send password</string>
    <string name="username">username</string>
    <string name="log_out">log out</string>
    <string name="change_password">change password</string>
    <string name="to_change_your_avatar_enter_url_here">to change your avatar enter url here</string>
    <string name="enter_your_current_password">enter your current password</string>
    <string name="enter_new_password">enter new password</string>
    <string name="change_avatar">change avatar</string>
    <string name="see_more">see more</string>
</resources>