<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <TextView
        android:id="@+id/signupTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textSize="40sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:fontFamily="serif-monospace"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/signupEmailEditText"/>

    <EditText
        android:id="@+id/signupEmailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_email"
        android:inputType="textEmailAddress"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/signupPasswordEditText"/>

    <EditText
        android:id="@+id/signupPasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"
        android:drawableEnd="@drawable/ic_show_password"
        android:layout_marginHorizontal="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <EditText
        android:id="@+id/signupRepeatPasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/repeat_your_password"
        android:inputType="textPassword"
        android:drawableEnd="@drawable/ic_show_password"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="40dp"
        app:layout_constraintTop_toBottomOf="@id/signupPasswordEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/signupButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupRepeatPasswordEditText"
        android:background="@drawable/button_bg"
        android:paddingVertical="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_have_account_login"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="@+id/signupButton"
        app:layout_constraintTop_toBottomOf="@+id/signupButton"/>


</androidx.constraintlayout.widget.ConstraintLayout>