<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">


    <ImageView
        android:id="@+id/profileImageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_margin="40dp"
        android:background="@drawable/profile_image_bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/profileUsernameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="user id"
        app:layout_constraintStart_toEndOf="@+id/profileImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/profileImageView"
        app:layout_constraintBottom_toBottomOf="@+id/profileImageView"/>

    <ImageView
        android:id="@+id/profileEditImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_edit"
        app:layout_constraintEnd_toEndOf="@+id/profileImageView"
        app:layout_constraintTop_toTopOf="@id/profileImageView"
        android:background="@drawable/button_bg"
        android:padding="5dp"/>

    <EditText
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/profile_image_bg"
        android:hint="@string/to_change_your_avatar_enter_url_here"
        android:layout_marginVertical="40dp"
        android:padding="20dp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@id/profileChangePasswordButton"
        app:layout_constraintEnd_toEndOf="@+id/profileChangePasswordButton"
        app:layout_constraintTop_toBottomOf="@id/profileImageView"
        app:layout_constraintBottom_toTopOf="@+id/profileChangeProfileAvatarButton"/>


    <TextView
        android:id="@+id/profileChangeProfileAvatarButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/change_avatar"
        android:textAlignment="center"
        android:background="@drawable/button_bg"
        android:paddingVertical="10dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintStart_toStartOf="@id/profileChangePasswordButton"
        app:layout_constraintEnd_toEndOf="@id/profileChangePasswordButton"
        app:layout_constraintBottom_toTopOf="@id/profileChangePasswordButton"/>

    <TextView
        android:id="@+id/profileLogOutButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_out"
        android:textAlignment="center"
        android:background="@drawable/button_bg"
        android:paddingVertical="10dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/profileChangePasswordButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_password"
        android:textAlignment="center"
        android:background="@drawable/button_bg"
        android:paddingVertical="10dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/profileLogOutButton"/>
</androidx.constraintlayout.widget.ConstraintLayout>