<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangePasswordActivity">

    <ImageView
        android:id="@+id/changePasswordGoBackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_go_back_button"
        android:layout_margin="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_password"
        android:textSize="30sp"
        android:fontFamily="serif-monospace"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/changePasswordCurrentPasswordEditText"/>
    <EditText
        android:id="@+id/changePasswordCurrentPasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_current_password"
        android:inputType="textPassword"
        android:layout_marginHorizontal="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/changePasswordNewPasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_new_password"
        android:inputType="textPassword"
        android:drawableEnd="@drawable/ic_show_password"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/changePasswordCurrentPasswordEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/changePasswordButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_password"
        android:textAlignment="center"
        android:background="@drawable/button_bg"
        android:paddingVertical="10dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/changePasswordNewPasswordEditText"/>
</androidx.constraintlayout.widget.ConstraintLayout>